fix intro pic flicker

--- a/src/css/introanime.css
+++ b/src/css/introanime.css
@@ -27,7 +27,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-duration: 1000ms;
-    animation-delay: 100ms;
+    animation-delay: 0ms;
     animation-name: fadeIn, right-slide-in;
   }
 
@@ -39,7 +39,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-duration: 1000ms;
-    animation-delay: 100ms;
+    animation-delay: 0ms;
     animation-name: fadeIn, left-slide-in;
   }
 }
@@ -56,7 +56,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-duration: 1000ms;
-    animation-delay: 100ms;
+    animation-delay: 0ms;
     animation-name: fadeIn, right-slide-in;
   }
 
@@ -68,7 +68,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-duration: 1000ms;
-    animation-delay: 100ms;
+    animation-delay: 0ms;
     animation-name: fadeIn, left-slide-in;
   }
 }
@@ -98,7 +98,7 @@
 
 @keyframes left-slide-in {
   from {
-    margin-left: -30rem;
+    margin-left: -40rem;
   }
 }
 
@@ -118,6 +118,6 @@
 
 @keyframes right-slide-in {
   from {
-    margin-right: -30rem;
+    margin-right: -40rem;
   }
 }
